Fix the clipping on the heart
#92

--- a/app/assets/stylesheets/static_pages.css
+++ b/app/assets/stylesheets/static_pages.css
@@ -65,6 +65,7 @@ footer > * {
   content: '\f021';
   font-family: 'FontAwesome';
   margin-right: 1.25em;
+  padding: 2px;
   font-size: 100px;
   float: left;
   width: 0;
